--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,15 +4,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-offline/redux-offline": "^2.6.0",
+    "@reduxjs/toolkit": "^2.2.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.3.1",
     "node-fetch": "^3.3.1",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -42,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-prismjs": "^2.1.0",
     "gh-pages": "^5.0.0",
     "webpack": "^5.82.0",
     "webpack-cli": "^5.1.1"
