--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.3.1",
     "node-fetch": "^3.3.1",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
@@ -26,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src",
+    "fix": "eslint --fix src"
   },
   "eslintConfig": {
     "extends": [
@@ -47,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/prismjs": "^1.26.4",
     "babel-plugin-prismjs": "^2.1.0",
     "gh-pages": "^5.0.0",
     "webpack": "^5.82.0",
